Attempted to fix container overflow in mobile version

--- a/css/index.css
+++ b/css/index.css
@@ -334,7 +334,7 @@ section {
 
 .flex-introduction {
     width: 100%;
-    height: 65vh;
+    height: 75vh;
     margin-top: 10rem;
     display: flex;
     flex-direction: column;
